force-app/main/default/objects/template__c/fields/Field10_Name__c.field-meta.xml
<CustomField>
    <fullName>Field10_Name__c</fullName>
    <label>Field10 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>