force-app/main/default/objects/template__c/fields/Field1_Name__c.field-meta.xml
<CustomField>
    <fullName>Field1_Name__c</fullName>
    <label>Field1 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>