force-app/main/default/objects/template__c/fields/Field1_Value__c.field-meta.xml
<CustomField>
    <fullName>Field1_Value__c</fullName>
    <label>Field1 Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>