force-app/main/default/objects/template__c/fields/Field2_Name__c.field-meta.xml
<CustomField>
    <fullName>Field2_Name__c</fullName>
    <label>Field2 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>