force-app/main/default/objects/template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field1_Name__c</columns>
    <columns>Field1_Value__c</columns>
    <columns>Field2_Name__c</columns>
    <columns>Field2_Value__c</columns>
    <columns>Field3_Name__c</columns>
    <columns>Field3_Value__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>